# smartfarm

./: app.py  pyproject.toml
assets/: images.py
pages/: 1_Live_Data.py  2_Historical_Data.py  3_Crop_Recommendation.py
utils/: code_zip.py  data_processing.py  ml_models.py  sheets_integration.py
